Renamed the project file from build.latte to project.latte and fixed parsing to handle the name. Refactored the code so that things didn't reference `build` files anymore as well. Also, updated to remove most of the references to `savant` that are not needed any longer